# vertx-tcp-eventbus-bridge-client-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  build-arm.sh  readme.md
src/: codec.rs  config.rs  eventbus.rs  future.rs  lib.rs  protocol.rs  request.rs  response.rs
test-server-scala/: build.sbt
test-server-scala/src/main/scala/: Main.scala
